Audit: Ensure nav, .ascii-title, and .subtitle are consistent and conflict-free across all pages

--- a/about.html
+++ b/about.html
@@ -1,3 +1,14 @@
+    .subtitle {
+      font-size: clamp(1rem, 2vw, 2rem);
+      font-weight: normal;
+      color: #e6ff8c;
+      margin-top: 20px;
+      text-align: left;
+    }
+      <div class="subtitle">
+        This is a subtitle example.
+      </div>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
