Performance: Add responsive srcset and sizes to gallery images in bits.html

--- a/bits.html
+++ b/bits.html
@@ -78,7 +78,7 @@
     }
     
     .subtitle {
-      font-size: clamp(1rem, 2vw, 2.5rem);
+      font-size: clamp(.5rem, 2vw, 1rem);
       color: #a4d4ae;
       margin-bottom: 6rem;
       margin-top: .5rem;
@@ -147,8 +147,8 @@
       top: 20%;
       transform: translateY(-50%);
       color: #e6ff8c;
-      font-size: clamp(2rem, 8cqw, 8rem);
-      font-size: clamp(2rem, 8vw, 8rem);
+      font-size: clamp(.5rem, 8cqw, 3rem);
+      font-size: clamp(.5rem, 8vw, 3rem);
       font-family: monospace;
       cursor: pointer;
       user-select: none;
@@ -197,80 +197,181 @@
     <div class="h2">&lt;</div>
     <div class="stack">
       <div class="sheet">
-  <img src= "bits1.webp" alt="bits 1" loading="lazy"/>
+  <img src="bits1.webp" alt="bits 1" loading="lazy"
+    srcset="bits1.webp 800w, bits1.webp 400w"
+    sizes="(max-width: 600px) 90vw, 800px"
+  />
     </div>
     <div class="sheet">
-  <img src= "bits2.webp" alt="bits 2" loading="lazy"/>
+  <img src="bits2.webp" alt="bits 2" loading="lazy"
+    srcset="bits2.webp 800w, bits2.webp 400w"
+    sizes="(max-width: 600px) 90vw, 800px"
+  />
     </div>
     <div class="sheet">
-  <img src= "bits3.webp" alt="bits 3" loading="lazy"/>
+  <img src="bits3.webp" alt="bits 3" loading="lazy"
+    srcset="bits3.webp 800w, bits3.webp 400w"
+    sizes="(max-width: 600px) 90vw, 800px"
+  />
     </div>
     <div class="sheet">
-  <img src= "bits4.webp" alt="bits 4" loading="lazy"/>
+  <img src="bits4.webp" alt="bits 4" loading="lazy"
+    srcset="bits4.webp 800w, bits4.webp 400w"
+    sizes="(max-width: 600px) 90vw, 800px"
+  />
     </div>
     <div class="sheet">
-  <img src= "bits5.webp" alt="bits 5" loading="lazy"/>
+  <img src="bits5.webp" alt="bits 5" loading="lazy"
+    srcset="bits5.webp 800w, bits5.webp 400w"
+    sizes="(max-width: 600px) 90vw, 800px"
+  />
     </div>
   <div class="sheet">
-  <img src= "bits6.webp" alt="bits 6" loading="lazy"/>
+  <img src="bits6.webp" alt="bits 6" loading="lazy"
+    srcset="bits6.webp 800w, bits6.webp 400w"
+    sizes="(max-width: 600px) 90vw, 800px"
+  />
       </div>
       <div class="sheet">
-  <img src= "bits7.webp" alt="bits 7" loading="lazy"/>
+  <img src="bits7.webp" alt="bits 7" loading="lazy"
+    srcset="bits7.webp 800w, bits7.webp 400w"
+    sizes="(max-width: 600px) 90vw, 800px"
+  />
       </div>
       <div class="sheet">
-  <img src= "bits8.webp" alt="bits 8" loading="lazy"/>
+  <img src="bits8.webp" alt="bits 8" loading="lazy"
+    srcset="bits8.webp 800w, bits8.webp 400w"
+    sizes="(max-width: 600px) 90vw, 800px"
+  />
       </div>
       <div class="sheet">
-  <img src= "bits9.webp" alt="bits 9" loading="lazy"/>
+  <img src="bits9.webp" alt="bits 9" loading="lazy"
+    srcset="bits9.webp 800w, bits9.webp 400w"
+    sizes="(max-width: 600px) 90vw, 800px"
+  />
       </div>
       <div class="sheet">
-  <img src= "bits10.webp" alt="bits 10" loading="lazy"/>
+  <img src="bits10.webp" alt="bits 10" loading="lazy"
+    srcset="bits10.webp 800w, bits10.webp 400w"
+    sizes="(max-width: 600px) 90vw, 800px"
+  />
       </div>
         <div class="sheet">
-          <img src= "bits11.webp" alt="bits 11" loading="lazy"/>
+          <img src="bits11.webp" alt="bits 11" loading="lazy"
+            srcset="bits11.webp 800w, bits11.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
         <div class="sheet">
-          <img src= "bits12.webp" alt="bits 12" loading="lazy"/>
+          <img src="bits12.webp" alt="bits 12" loading="lazy"
+            srcset="bits12.webp 800w, bits12.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
         <div class="sheet">
-          <img src= "bits13.webp" alt="bits 13" loading="lazy"/>
+          <img src="bits13.webp" alt="bits 13" loading="lazy"
+            srcset="bits13.webp 800w, bits13.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
         <div class="sheet">
-          <img src= "bits14.webp" alt="bits 14" loading="lazy"/>
+          <img src="bits14.webp" alt="bits 14" loading="lazy"
+            srcset="bits14.webp 800w, bits14.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
         <div class="sheet">
-          <img src= "bits15.webp" alt="bits 15" loading="lazy"/>
+          <img src="bits15.webp" alt="bits 15" loading="lazy"
+            srcset="bits15.webp 800w, bits15.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
         <div class="sheet">
-          <img src= "bits16.webp" alt="bits 16" loading="lazy"/>
+          <img src="bits16.webp" alt="bits 16" loading="lazy"
+            srcset="bits16.webp 800w, bits16.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
         <div class="sheet">
-          <img src= "bits17.webp" alt="bits 17" loading="lazy"/>
+          <img src="bits17.webp" alt="bits 17" loading="lazy"
+            srcset="bits17.webp 800w, bits17.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
         <div class="sheet">
-          <img src= "bits18.webp" alt="bits 18" loading="lazy"/>
+          <img src="bits18.webp" alt="bits 18" loading="lazy"
+            srcset="bits18.webp 800w, bits18.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
         <div class="sheet">
-          <img src= "bits19.webp" alt="bits 19" loading="lazy"/>
+          <img src="bits19.webp" alt="bits 19" loading="lazy"
+            srcset="bits19.webp 800w, bits19.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
         <div class="sheet">
-          <img src= "bits20.webp" alt="bits 20" loading="lazy"/>
+          <img src="bits20.webp" alt="bits 20" loading="lazy"
+            srcset="bits20.webp 800w, bits20.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
         <div class="sheet">
-          <img src= "bits21.webp" alt="bits 21" loading="lazy"/>
+          <img src="bits21.webp" alt="bits 21" loading="lazy"
+            srcset="bits21.webp 800w, bits21.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
         <div class="sheet">
-          <img src= "bits22.webp" alt="bits 22" loading="lazy"/>
+          <img src="bits22.webp" alt="bits 22" loading="lazy"
+            srcset="bits22.webp 800w, bits22.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
         <div class="sheet">
-          <img src= "bits23.webp" alt="bits 23" loading="lazy"/>
+          <img src="bits23.webp" alt="bits 23" loading="lazy"
+            srcset="bits23.webp 800w, bits23.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
         <div class="sheet">
-          <img src= "bits24.webp" alt="bits 24" loading="lazy"/>
+          <img src="bits24.webp" alt="bits 24" loading="lazy"
+            srcset="bits24.webp 800w, bits24.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
         <div class="sheet">
-          <img src= "bits25.webp" alt="bits 25" loading="lazy"/>
+          <img src="bits25.webp" alt="bits 25" loading="lazy"
+            srcset="bits25.webp 800w, bits25.webp 400w"
+            sizes="(max-width: 600px) 90vw, 800px"
+          />
         </div>
     </div>
     <div class="h1">&gt;</div>
   </div>
+
+  <script>
+    $(document).ready(function() {
+        var stack = $('.stack').paperstack({});
+
+        $('.h1').click(stack.next);
+        $('.h2').click(stack.previous);
+    });
+</script>
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-36251023-1']);
+  _gaq.push(['_setDomainName', 'jqueryscript.net']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+  </script>
+</body>
+</html>
