--- a/bits.html
+++ b/bits.html
@@ -110,13 +110,13 @@
   position: relative;
   margin: 7vw auto 2.5rem auto;
   width: 80vw;
-  aspect-ratio: 1 / 1.2;
+  /* aspect-ratio removed to allow images to size naturally */
   background: transparent;
   background-size: contain;
   max-width: 100vw;
   overflow: visible;
   min-height: unset;
-  max-height: calc(100vh - 6rem); /* Cut off just below the stack, adjust as needed */
+  /* max-height removed to allow images to size naturally */
   box-shadow: 0 2px 12px 0 #1b1b1b;
   border-radius: 1.5rem;
   padding-bottom: 1.5rem;
@@ -126,7 +126,7 @@
     @media (max-width: 768px) {
       .centered-container {
         --container-width: 85vw;
-        aspect-ratio: 1 / 1.2; /* Change to portrait-friendly aspect ratio */
+        /* aspect-ratio removed */
         width: 85%;
         overflow: visible; /* Ensure no inner scrollbar on mobile */
       }
@@ -135,10 +135,16 @@
     @media (max-width: 480px) {
       .centered-container {
         --container-width: 80vw;
-        aspect-ratio: 1 / 1.4; /* Even more portrait-friendly */
+        /* aspect-ratio removed */
         width: 80%;
         overflow: visible; /* Ensure no inner scrollbar on small mobile */
       }
+  .sheet img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    display: block;
+  }
     }
     
 
