Fix: Remove body max-height and overflow-y to restore normal page scroll and prevent gallery cropping

--- a/bits.html
+++ b/bits.html
@@ -20,9 +20,9 @@
       color: #d9d9c2;
       font-family: monospace;
       text-align: center;
-      max-height: 100vh;
+  /* max-height removed to allow full page scroll */
       margin-bottom: 32px; /* Small margin after content */
-      overflow-y: auto;
+  /* overflow-y removed to allow full page scroll */
     }
     
     /* Updated nav to match contact.html formula */
