--- a/bits.html
+++ b/bits.html
@@ -20,9 +20,9 @@
       color: #d9d9c2;
       font-family: monospace;
       text-align: center;
-  /* max-height removed to allow full page scroll */
+      max-height: 100vh;
       margin-bottom: 32px; /* Small margin after content */
-  /* overflow-y removed to allow full page scroll */
+      overflow-y: auto;
     }
     
     /* Updated nav to match contact.html formula */
@@ -110,13 +110,13 @@
   position: relative;
   margin: 7vw auto 2.5rem auto;
   width: 80vw;
-  /* aspect-ratio removed to allow images to size naturally */
+  aspect-ratio: 1 / 1.2;
   background: transparent;
   background-size: contain;
   max-width: 100vw;
   overflow: visible;
   min-height: unset;
-  /* max-height removed to allow images to size naturally */
+  max-height: calc(100vh - 6rem); /* Cut off just below the stack, adjust as needed */
   box-shadow: 0 2px 12px 0 #1b1b1b;
   border-radius: 1.5rem;
   padding-bottom: 1.5rem;
@@ -126,7 +126,7 @@
     @media (max-width: 768px) {
       .centered-container {
         --container-width: 85vw;
-        /* aspect-ratio removed */
+        aspect-ratio: 1 / 1.2; /* Change to portrait-friendly aspect ratio */
         width: 85%;
         overflow: visible; /* Ensure no inner scrollbar on mobile */
       }
@@ -135,16 +135,10 @@
     @media (max-width: 480px) {
       .centered-container {
         --container-width: 80vw;
-        /* aspect-ratio removed */
+        aspect-ratio: 1 / 1.4; /* Even more portrait-friendly */
         width: 80%;
         overflow: visible; /* Ensure no inner scrollbar on small mobile */
       }
-  .sheet img {
-    width: 100%;
-    height: auto;
-    object-fit: contain;
-    display: block;
-  }
     }
     
 
