Update bits.html to use desktop/mobile folders and responsive srcset for images

--- a/bits.html
+++ b/bits.html
@@ -197,153 +197,153 @@
     <div class="h2">&lt;</div>
     <div class="stack">
       <div class="sheet">
-  <img src="bits1.webp" alt="bits 1" loading="lazy"
-    srcset="bits1.webp 800w, bits1.webp 400w"
-    sizes="(max-width: 600px) 90vw, 800px"
+  <img src="desktop/desktop-bits1.webp" alt="bits 1" loading="lazy"
+    srcset="desktop/desktop-bits1.webp 1600w, mobile/mobile-bits1.webp 600w"
+    sizes="(max-width: 600px) 90vw, 1600px"
   />
     </div>
     <div class="sheet">
-  <img src="bits2.webp" alt="bits 2" loading="lazy"
-    srcset="bits2.webp 800w, bits2.webp 400w"
-    sizes="(max-width: 600px) 90vw, 800px"
+  <img src="desktop/desktop-bits2.webp" alt="bits 2" loading="lazy"
+    srcset="desktop/desktop-bits2.webp 1600w, mobile/mobile-bits2.webp 600w"
+    sizes="(max-width: 600px) 90vw, 1600px"
   />
     </div>
     <div class="sheet">
-  <img src="bits3.webp" alt="bits 3" loading="lazy"
-    srcset="bits3.webp 800w, bits3.webp 400w"
-    sizes="(max-width: 600px) 90vw, 800px"
+  <img src="desktop/desktop-bits3.webp" alt="bits 3" loading="lazy"
+    srcset="desktop/desktop-bits3.webp 1600w, mobile/mobile-bits3.webp 600w"
+    sizes="(max-width: 600px) 90vw, 1600px"
   />
     </div>
     <div class="sheet">
-  <img src="bits4.webp" alt="bits 4" loading="lazy"
-    srcset="bits4.webp 800w, bits4.webp 400w"
-    sizes="(max-width: 600px) 90vw, 800px"
+  <img src="desktop/desktop-bits4.webp" alt="bits 4" loading="lazy"
+    srcset="desktop/desktop-bits4.webp 1600w, mobile/mobile-bits4.webp 600w"
+    sizes="(max-width: 600px) 90vw, 1600px"
   />
     </div>
     <div class="sheet">
-  <img src="bits5.webp" alt="bits 5" loading="lazy"
-    srcset="bits5.webp 800w, bits5.webp 400w"
-    sizes="(max-width: 600px) 90vw, 800px"
+  <img src="desktop/desktop-bits5.webp" alt="bits 5" loading="lazy"
+    srcset="desktop/desktop-bits5.webp 1600w, mobile/mobile-bits5.webp 600w"
+    sizes="(max-width: 600px) 90vw, 1600px"
   />
     </div>
   <div class="sheet">
-  <img src="bits6.webp" alt="bits 6" loading="lazy"
-    srcset="bits6.webp 800w, bits6.webp 400w"
-    sizes="(max-width: 600px) 90vw, 800px"
+  <img src="desktop/desktop-bits6.webp" alt="bits 6" loading="lazy"
+    srcset="desktop/desktop-bits6.webp 1600w, mobile/mobile-bits6.webp 600w"
+    sizes="(max-width: 600px) 90vw, 1600px"
   />
       </div>
       <div class="sheet">
-  <img src="bits7.webp" alt="bits 7" loading="lazy"
-    srcset="bits7.webp 800w, bits7.webp 400w"
-    sizes="(max-width: 600px) 90vw, 800px"
+  <img src="desktop/desktop-bits7.webp" alt="bits 7" loading="lazy"
+    srcset="desktop/desktop-bits7.webp 1600w, mobile/mobile-bits7.webp 600w"
+    sizes="(max-width: 600px) 90vw, 1600px"
   />
       </div>
       <div class="sheet">
-  <img src="bits8.webp" alt="bits 8" loading="lazy"
-    srcset="bits8.webp 800w, bits8.webp 400w"
-    sizes="(max-width: 600px) 90vw, 800px"
+  <img src="desktop/desktop-bits8.webp" alt="bits 8" loading="lazy"
+    srcset="desktop/desktop-bits8.webp 1600w, mobile/mobile-bits8.webp 600w"
+    sizes="(max-width: 600px) 90vw, 1600px"
   />
       </div>
       <div class="sheet">
-  <img src="bits9.webp" alt="bits 9" loading="lazy"
-    srcset="bits9.webp 800w, bits9.webp 400w"
-    sizes="(max-width: 600px) 90vw, 800px"
+  <img src="desktop/desktop-bits9.webp" alt="bits 9" loading="lazy"
+    srcset="desktop/desktop-bits9.webp 1600w, mobile/mobile-bits9.webp 600w"
+    sizes="(max-width: 600px) 90vw, 1600px"
   />
       </div>
       <div class="sheet">
-  <img src="bits10.webp" alt="bits 10" loading="lazy"
-    srcset="bits10.webp 800w, bits10.webp 400w"
-    sizes="(max-width: 600px) 90vw, 800px"
+  <img src="desktop/desktop-bits10.webp" alt="bits 10" loading="lazy"
+    srcset="desktop/desktop-bits10.webp 1600w, mobile/mobile-bits10.webp 600w"
+    sizes="(max-width: 600px) 90vw, 1600px"
   />
       </div>
         <div class="sheet">
-          <img src="bits11.webp" alt="bits 11" loading="lazy"
-            srcset="bits11.webp 800w, bits11.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits11.webp" alt="bits 11" loading="lazy"
+            srcset="desktop/desktop-bits11.webp 1600w, mobile/mobile-bits11.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
-          <img src="bits12.webp" alt="bits 12" loading="lazy"
-            srcset="bits12.webp 800w, bits12.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits12.webp" alt="bits 12" loading="lazy"
+            srcset="desktop/desktop-bits12.webp 1600w, mobile/mobile-bits12.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
-          <img src="bits13.webp" alt="bits 13" loading="lazy"
-            srcset="bits13.webp 800w, bits13.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits13.webp" alt="bits 13" loading="lazy"
+            srcset="desktop/desktop-bits13.webp 1600w, mobile/mobile-bits13.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
-          <img src="bits14.webp" alt="bits 14" loading="lazy"
-            srcset="bits14.webp 800w, bits14.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits14.webp" alt="bits 14" loading="lazy"
+            srcset="desktop/desktop-bits14.webp 1600w, mobile/mobile-bits14.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
-          <img src="bits15.webp" alt="bits 15" loading="lazy"
-            srcset="bits15.webp 800w, bits15.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits15.webp" alt="bits 15" loading="lazy"
+            srcset="desktop/desktop-bits15.webp 1600w, mobile/mobile-bits15.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
-          <img src="bits16.webp" alt="bits 16" loading="lazy"
-            srcset="bits16.webp 800w, bits16.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits16.webp" alt="bits 16" loading="lazy"
+            srcset="desktop/desktop-bits16.webp 1600w, mobile/mobile-bits16.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
-          <img src="bits17.webp" alt="bits 17" loading="lazy"
-            srcset="bits17.webp 800w, bits17.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits17.webp" alt="bits 17" loading="lazy"
+            srcset="desktop/desktop-bits17.webp 1600w, mobile/mobile-bits17.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
-          <img src="bits18.webp" alt="bits 18" loading="lazy"
-            srcset="bits18.webp 800w, bits18.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits18.webp" alt="bits 18" loading="lazy"
+            srcset="desktop/desktop-bits18.webp 1600w, mobile/mobile-bits18.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
-          <img src="bits19.webp" alt="bits 19" loading="lazy"
-            srcset="bits19.webp 800w, bits19.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits19.webp" alt="bits 19" loading="lazy"
+            srcset="desktop/desktop-bits19.webp 1600w, mobile/mobile-bits19.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
-          <img src="bits20.webp" alt="bits 20" loading="lazy"
-            srcset="bits20.webp 800w, bits20.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits20.webp" alt="bits 20" loading="lazy"
+            srcset="desktop/desktop-bits20.webp 1600w, mobile/mobile-bits20.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
-          <img src="bits21.webp" alt="bits 21" loading="lazy"
-            srcset="bits21.webp 800w, bits21.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits21.webp" alt="bits 21" loading="lazy"
+            srcset="desktop/desktop-bits21.webp 1600w, mobile/mobile-bits21.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
-          <img src="bits22.webp" alt="bits 22" loading="lazy"
-            srcset="bits22.webp 800w, bits22.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits22.webp" alt="bits 22" loading="lazy"
+            srcset="desktop/desktop-bits22.webp 1600w, mobile/mobile-bits22.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
-          <img src="bits23.webp" alt="bits 23" loading="lazy"
-            srcset="bits23.webp 800w, bits23.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits23.webp" alt="bits 23" loading="lazy"
+            srcset="desktop/desktop-bits23.webp 1600w, mobile/mobile-bits23.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
-          <img src="bits24.webp" alt="bits 24" loading="lazy"
-            srcset="bits24.webp 800w, bits24.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits24.webp" alt="bits 24" loading="lazy"
+            srcset="desktop/desktop-bits24.webp 1600w, mobile/mobile-bits24.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
-          <img src="bits25.webp" alt="bits 25" loading="lazy"
-            srcset="bits25.webp 800w, bits25.webp 400w"
-            sizes="(max-width: 600px) 90vw, 800px"
+          <img src="desktop/desktop-bits25.webp" alt="bits 25" loading="lazy"
+            srcset="desktop/desktop-bits25.webp 1600w, mobile/mobile-bits25.webp 600w"
+            sizes="(max-width: 600px) 90vw, 1600px"
           />
         </div>
     </div>
