Preload first image and defer non-critical scripts for better performance

--- a/bits.html
+++ b/bits.html
@@ -192,9 +192,9 @@
   </div>
 
   <div id="random-ascii"></div>
-  <script src="randomImage.js" defer></script>
+  <script src="randomImage.js"></script>
     
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
   <script src="Stacked-Card-Slider-Plugin-paperstack/paperstack.js" defer></script>
 
   <div class="subtitle">Unfinished, Untitled, Random Abandoned</div>
@@ -365,18 +365,18 @@
     });
 </script>
 
-<script type="text/javascript" defer>
+<script type="text/javascript">
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-36251023-1']);
   _gaq.push(['_setDomainName', 'jqueryscript.net']);
   _gaq.push(['_trackPageview']);
 
-  (function() {
+  window.addEventListener('load', function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+  });
 
   </script>
 </body>
