--- a/bits.html
+++ b/bits.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Preload the first image for faster initial render -->
-  <link rel="preload" as="image" href="desktop-bits1.webp" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bits</title>
@@ -194,8 +192,8 @@
   <div id="random-ascii"></div>
   <script src="randomImage.js"></script>
     
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
-  <script src="Stacked-Card-Slider-Plugin-paperstack/paperstack.js" defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="Stacked-Card-Slider-Plugin-paperstack/paperstack.js"></script>
 
   <div class="subtitle">Unfinished, Untitled, Random Abandoned</div>
 
@@ -372,11 +370,11 @@
   _gaq.push(['_setDomainName', 'jqueryscript.net']);
   _gaq.push(['_trackPageview']);
 
-  window.addEventListener('load', function() {
+  (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  });
+  })();
 
   </script>
 </body>
