--- a/bits.html
+++ b/bits.html
@@ -202,152 +202,152 @@
     <div class="stack">
       <div class="sheet">
   <img src="desktop-bits1.webp" alt="bits 1" loading="lazy"
-    srcset="desktop-bits1.webp 1600w, mobile-bits1.webp 600w"
-    sizes="(max-width: 600px) 90vw, 1600px"
+  srcset="desktop-bits1.webp 1600w, mobile-bits1.webp 600w, mobile-q45/mobile-bits1.webp 400w"
+  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
   />
     </div>
     <div class="sheet">
   <img src="desktop-bits2.webp" alt="bits 2" loading="lazy"
-    srcset="desktop-bits2.webp 1600w, mobile-bits2.webp 600w"
-    sizes="(max-width: 600px) 90vw, 1600px"
+  srcset="desktop-bits2.webp 1600w, mobile-bits2.webp 600w, mobile-q45/mobile-bits2.webp 400w"
+  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
   />
     </div>
     <div class="sheet">
   <img src="desktop-bits3.webp" alt="bits 3" loading="lazy"
-    srcset="desktop-bits3.webp 1600w, mobile-bits3.webp 600w"
-    sizes="(max-width: 600px) 90vw, 1600px"
+  srcset="desktop-bits3.webp 1600w, mobile-bits3.webp 600w, mobile-q45/mobile-bits3.webp 400w"
+  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
   />
     </div>
     <div class="sheet">
   <img src="desktop-bits4.webp" alt="bits 4" loading="lazy"
-    srcset="desktop-bits4.webp 1600w, mobile-bits4.webp 600w"
-    sizes="(max-width: 600px) 90vw, 1600px"
+  srcset="desktop-bits4.webp 1600w, mobile-bits4.webp 600w, mobile-q45/mobile-bits4.webp 400w"
+  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
   />
     </div>
     <div class="sheet">
   <img src="desktop-bits5.webp" alt="bits 5" loading="lazy"
-    srcset="desktop-bits5.webp 1600w, mobile-bits5.webp 600w"
-    sizes="(max-width: 600px) 90vw, 1600px"
+  srcset="desktop-bits5.webp 1600w, mobile-bits5.webp 600w, mobile-q45/mobile-bits5.webp 400w"
+  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
   />
     </div>
   <div class="sheet">
   <img src="desktop-bits6.webp" alt="bits 6" loading="lazy"
-    srcset="desktop-bits6.webp 1600w, mobile-bits6.webp 600w"
-    sizes="(max-width: 600px) 90vw, 1600px"
+  srcset="desktop-bits6.webp 1600w, mobile-bits6.webp 600w, mobile-q45/mobile-bits6.webp 400w"
+  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
   />
       </div>
       <div class="sheet">
   <img src="desktop-bits7.webp" alt="bits 7" loading="lazy"
-    srcset="desktop-bits7.webp 1600w, mobile-bits7.webp 600w"
-    sizes="(max-width: 600px) 90vw, 1600px"
+  srcset="desktop-bits7.webp 1600w, mobile-bits7.webp 600w, mobile-q45/mobile-bits7.webp 400w"
+  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
   />
       </div>
       <div class="sheet">
   <img src="desktop-bits8.webp" alt="bits 8" loading="lazy"
-    srcset="desktop-bits8.webp 1600w, mobile-bits8.webp 600w"
-    sizes="(max-width: 600px) 90vw, 1600px"
+  srcset="desktop-bits8.webp 1600w, mobile-bits8.webp 600w, mobile-q45/mobile-bits8.webp 400w"
+  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
   />
       </div>
       <div class="sheet">
   <img src="desktop-bits9.webp" alt="bits 9" loading="lazy"
-    srcset="desktop-bits9.webp 1600w, mobile-bits9.webp 600w"
-    sizes="(max-width: 600px) 90vw, 1600px"
+  srcset="desktop-bits9.webp 1600w, mobile-bits9.webp 600w, mobile-q45/mobile-bits9.webp 400w"
+  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
   />
       </div>
       <div class="sheet">
   <img src="desktop-bits10.webp" alt="bits 10" loading="lazy"
-    srcset="desktop-bits10.webp 1600w, mobile-bits10.webp 600w"
-    sizes="(max-width: 600px) 90vw, 1600px"
+  srcset="desktop-bits10.webp 1600w, mobile-bits10.webp 600w, mobile-q45/mobile-bits10.webp 400w"
+  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
   />
       </div>
         <div class="sheet">
           <img src="desktop-bits11.webp" alt="bits 11" loading="lazy"
-            srcset="desktop-bits11.webp 1600w, mobile-bits11.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits11.webp 1600w, mobile-bits11.webp 600w, mobile-q45/mobile-bits11.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
           <img src="desktop-bits12.webp" alt="bits 12" loading="lazy"
-            srcset="desktop-bits12.webp 1600w, mobile-bits12.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits12.webp 1600w, mobile-bits12.webp 600w, mobile-q45/mobile-bits12.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
           <img src="desktop-bits13.webp" alt="bits 13" loading="lazy"
-            srcset="desktop-bits13.webp 1600w, mobile-bits13.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits13.webp 1600w, mobile-bits13.webp 600w, mobile-q45/mobile-bits13.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
           <img src="desktop-bits14.webp" alt="bits 14" loading="lazy"
-            srcset="desktop-bits14.webp 1600w, mobile-bits14.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits14.webp 1600w, mobile-bits14.webp 600w, mobile-q45/mobile-bits14.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
           <img src="desktop-bits15.webp" alt="bits 15" loading="lazy"
-            srcset="desktop-bits15.webp 1600w, mobile-bits15.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits15.webp 1600w, mobile-bits15.webp 600w, mobile-q45/mobile-bits15.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
           <img src="desktop-bits16.webp" alt="bits 16" loading="lazy"
-            srcset="desktop-bits16.webp 1600w, mobile-bits16.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits16.webp 1600w, mobile-bits16.webp 600w, mobile-q45/mobile-bits16.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
           <img src="desktop-bits17.webp" alt="bits 17" loading="lazy"
-            srcset="desktop-bits17.webp 1600w, mobile-bits17.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits17.webp 1600w, mobile-bits17.webp 600w, mobile-q45/mobile-bits17.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
           <img src="desktop-bits18.webp" alt="bits 18" loading="lazy"
-            srcset="desktop-bits18.webp 1600w, mobile-bits18.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits18.webp 1600w, mobile-bits18.webp 600w, mobile-q45/mobile-bits18.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
           <img src="desktop-bits19.webp" alt="bits 19" loading="lazy"
-            srcset="desktop-bits19.webp 1600w, mobile-bits19.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits19.webp 1600w, mobile-bits19.webp 600w, mobile-q45/mobile-bits19.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
           <img src="desktop-bits20.webp" alt="bits 20" loading="lazy"
-            srcset="desktop-bits20.webp 1600w, mobile-bits20.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits20.webp 1600w, mobile-bits20.webp 600w, mobile-q45/mobile-bits20.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
           <img src="desktop-bits21.webp" alt="bits 21" loading="lazy"
-            srcset="desktop-bits21.webp 1600w, mobile-bits21.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits21.webp 1600w, mobile-bits21.webp 600w, mobile-q45/mobile-bits21.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
           <img src="desktop-bits22.webp" alt="bits 22" loading="lazy"
-            srcset="desktop-bits22.webp 1600w, mobile-bits22.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits22.webp 1600w, mobile-bits22.webp 600w, mobile-q45/mobile-bits22.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
           <img src="desktop-bits23.webp" alt="bits 23" loading="lazy"
-            srcset="desktop-bits23.webp 1600w, mobile-bits23.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits23.webp 1600w, mobile-bits23.webp 600w, mobile-q45/mobile-bits23.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
           <img src="desktop-bits24.webp" alt="bits 24" loading="lazy"
-            srcset="desktop-bits24.webp 1600w, mobile-bits24.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits24.webp 1600w, mobile-bits24.webp 600w, mobile-q45/mobile-bits24.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
         <div class="sheet">
           <img src="desktop-bits25.webp" alt="bits 25" loading="lazy"
-            srcset="desktop-bits25.webp 1600w, mobile-bits25.webp 600w"
-            sizes="(max-width: 600px) 90vw, 1600px"
+            srcset="desktop-bits25.webp 1600w, mobile-bits25.webp 600w, mobile-q45/mobile-bits25.webp 400w"
+            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
           />
         </div>
     </div>
