--- a/bits.html
+++ b/bits.html
@@ -166,6 +166,19 @@
     .h2 {
       left: 2%;
     }
+    
+    /* Fix for images inside picture elements */
+    .stack > .sheet picture img {
+      width: 100% !important;
+      height: auto !important;
+      object-fit: contain !important;
+    }
+    
+    .stack > .sheet picture {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
   </style>
   <link rel="stylesheet" href="Stacked-Card-Slider-Plugin-paperstack/paperstack.css" />
 </head>
@@ -201,154 +214,154 @@
     <div class="h2">&lt;</div>
     <div class="stack">
       <div class="sheet">
-  <img src="desktop-bits1.webp" alt="bits 1" loading="lazy"
-  srcset="desktop-bits1.webp 1600w, mobile-bits1.webp 600w, mobile-q45/mobile-bits1.webp 400w"
-  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-  />
+        <picture>
+          <source media="(max-width: 480px)" srcset="mobile-bits1.webp">
+          <img src="desktop-bits1.webp" alt="bits 1" loading="lazy">
+        </picture>
+      </div>
+    <div class="sheet">
+      <picture>
+        <source media="(max-width: 480px)" srcset="mobile-bits2.webp">
+        <img src="desktop-bits2.webp" alt="bits 2" loading="lazy">
+      </picture>
     </div>
     <div class="sheet">
-  <img src="desktop-bits2.webp" alt="bits 2" loading="lazy"
-  srcset="desktop-bits2.webp 1600w, mobile-bits2.webp 600w, mobile-q45/mobile-bits2.webp 400w"
-  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-  />
+      <picture>
+        <source media="(max-width: 480px)" srcset="mobile-bits3.webp">
+        <img src="desktop-bits3.webp" alt="bits 3" loading="lazy">
+      </picture>
     </div>
     <div class="sheet">
-  <img src="desktop-bits3.webp" alt="bits 3" loading="lazy"
-  srcset="desktop-bits3.webp 1600w, mobile-bits3.webp 600w, mobile-q45/mobile-bits3.webp 400w"
-  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-  />
+      <picture>
+        <source media="(max-width: 480px)" srcset="mobile-bits4.webp">
+        <img src="desktop-bits4.webp" alt="bits 4" loading="lazy">
+      </picture>
     </div>
     <div class="sheet">
-  <img src="desktop-bits4.webp" alt="bits 4" loading="lazy"
-  srcset="desktop-bits4.webp 1600w, mobile-bits4.webp 600w, mobile-q45/mobile-bits4.webp 400w"
-  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-  />
-    </div>
-    <div class="sheet">
-  <img src="desktop-bits5.webp" alt="bits 5" loading="lazy"
-  srcset="desktop-bits5.webp 1600w, mobile-bits5.webp 600w, mobile-q45/mobile-bits5.webp 400w"
-  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-  />
+      <picture>
+        <source media="(max-width: 480px)" srcset="mobile-bits5.webp">
+        <img src="desktop-bits5.webp" alt="bits 5" loading="lazy">
+      </picture>
     </div>
   <div class="sheet">
-  <img src="desktop-bits6.webp" alt="bits 6" loading="lazy"
-  srcset="desktop-bits6.webp 1600w, mobile-bits6.webp 600w, mobile-q45/mobile-bits6.webp 400w"
-  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-  />
+    <picture>
+      <source media="(max-width: 480px)" srcset="mobile-bits6.webp">
+      <img src="desktop-bits6.webp" alt="bits 6" loading="lazy">
+    </picture>
+  </div>
+      <div class="sheet">
+        <picture>
+          <source media="(max-width: 480px)" srcset="mobile-bits7.webp">
+          <img src="desktop-bits7.webp" alt="bits 7" loading="lazy">
+        </picture>
       </div>
       <div class="sheet">
-  <img src="desktop-bits7.webp" alt="bits 7" loading="lazy"
-  srcset="desktop-bits7.webp 1600w, mobile-bits7.webp 600w, mobile-q45/mobile-bits7.webp 400w"
-  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-  />
+        <picture>
+          <source media="(max-width: 480px)" srcset="mobile-bits8.webp">
+          <img src="desktop-bits8.webp" alt="bits 8" loading="lazy">
+        </picture>
       </div>
       <div class="sheet">
-  <img src="desktop-bits8.webp" alt="bits 8" loading="lazy"
-  srcset="desktop-bits8.webp 1600w, mobile-bits8.webp 600w, mobile-q45/mobile-bits8.webp 400w"
-  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-  />
+        <picture>
+          <source media="(max-width: 480px)" srcset="mobile-bits9.webp">
+          <img src="desktop-bits9.webp" alt="bits 9" loading="lazy">
+        </picture>
       </div>
       <div class="sheet">
-  <img src="desktop-bits9.webp" alt="bits 9" loading="lazy"
-  srcset="desktop-bits9.webp 1600w, mobile-bits9.webp 600w, mobile-q45/mobile-bits9.webp 400w"
-  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-  />
-      </div>
-      <div class="sheet">
-  <img src="desktop-bits10.webp" alt="bits 10" loading="lazy"
-  srcset="desktop-bits10.webp 1600w, mobile-bits10.webp 600w, mobile-q45/mobile-bits10.webp 400w"
-  sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-  />
+        <picture>
+          <source media="(max-width: 480px)" srcset="mobile-bits10.webp">
+          <img src="desktop-bits10.webp" alt="bits 10" loading="lazy">
+        </picture>
       </div>
         <div class="sheet">
-          <img src="desktop-bits11.webp" alt="bits 11" loading="lazy"
-            srcset="desktop-bits11.webp 1600w, mobile-bits11.webp 600w, mobile-q45/mobile-bits11.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits11.webp">
+            <img src="desktop-bits11.webp" alt="bits 11" loading="lazy">
+          </picture>
         </div>
         <div class="sheet">
-          <img src="desktop-bits12.webp" alt="bits 12" loading="lazy"
-            srcset="desktop-bits12.webp 1600w, mobile-bits12.webp 600w, mobile-q45/mobile-bits12.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits12.webp">
+            <img src="desktop-bits12.webp" alt="bits 12" loading="lazy">
+          </picture>
         </div>
         <div class="sheet">
-          <img src="desktop-bits13.webp" alt="bits 13" loading="lazy"
-            srcset="desktop-bits13.webp 1600w, mobile-bits13.webp 600w, mobile-q45/mobile-bits13.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits13.webp">
+            <img src="desktop-bits13.webp" alt="bits 13" loading="lazy">
+          </picture>
         </div>
         <div class="sheet">
-          <img src="desktop-bits14.webp" alt="bits 14" loading="lazy"
-            srcset="desktop-bits14.webp 1600w, mobile-bits14.webp 600w, mobile-q45/mobile-bits14.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits14.webp">
+            <img src="desktop-bits14.webp" alt="bits 14" loading="lazy">
+          </picture>
         </div>
         <div class="sheet">
-          <img src="desktop-bits15.webp" alt="bits 15" loading="lazy"
-            srcset="desktop-bits15.webp 1600w, mobile-bits15.webp 600w, mobile-q45/mobile-bits15.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits15.webp">
+            <img src="desktop-bits15.webp" alt="bits 15" loading="lazy">
+          </picture>
         </div>
         <div class="sheet">
-          <img src="desktop-bits16.webp" alt="bits 16" loading="lazy"
-            srcset="desktop-bits16.webp 1600w, mobile-bits16.webp 600w, mobile-q45/mobile-bits16.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits16.webp">
+            <img src="desktop-bits16.webp" alt="bits 16" loading="lazy">
+          </picture>
         </div>
         <div class="sheet">
-          <img src="desktop-bits17.webp" alt="bits 17" loading="lazy"
-            srcset="desktop-bits17.webp 1600w, mobile-bits17.webp 600w, mobile-q45/mobile-bits17.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits17.webp">
+            <img src="desktop-bits17.webp" alt="bits 17" loading="lazy">
+          </picture>
         </div>
         <div class="sheet">
-          <img src="desktop-bits18.webp" alt="bits 18" loading="lazy"
-            srcset="desktop-bits18.webp 1600w, mobile-bits18.webp 600w, mobile-q45/mobile-bits18.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits18.webp">
+            <img src="desktop-bits18.webp" alt="bits 18" loading="lazy">
+          </picture>
         </div>
         <div class="sheet">
-          <img src="desktop-bits19.webp" alt="bits 19" loading="lazy"
-            srcset="desktop-bits19.webp 1600w, mobile-bits19.webp 600w, mobile-q45/mobile-bits19.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits19.webp">
+            <img src="desktop-bits19.webp" alt="bits 19" loading="lazy">
+          </picture>
         </div>
         <div class="sheet">
-          <img src="desktop-bits20.webp" alt="bits 20" loading="lazy"
-            srcset="desktop-bits20.webp 1600w, mobile-bits20.webp 600w, mobile-q45/mobile-bits20.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits20.webp">
+            <img src="desktop-bits20.webp" alt="bits 20" loading="lazy">
+          </picture>
         </div>
         <div class="sheet">
-          <img src="desktop-bits21.webp" alt="bits 21" loading="lazy"
-            srcset="desktop-bits21.webp 1600w, mobile-bits21.webp 600w, mobile-q45/mobile-bits21.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits21.webp">
+            <img src="desktop-bits21.webp" alt="bits 21" loading="lazy">
+          </picture>
         </div>
         <div class="sheet">
-          <img src="desktop-bits22.webp" alt="bits 22" loading="lazy"
-            srcset="desktop-bits22.webp 1600w, mobile-bits22.webp 600w, mobile-q45/mobile-bits22.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits22.webp">
+            <img src="desktop-bits22.webp" alt="bits 22" loading="lazy">
+          </picture>
         </div>
         <div class="sheet">
-          <img src="desktop-bits23.webp" alt="bits 23" loading="lazy"
-            srcset="desktop-bits23.webp 1600w, mobile-bits23.webp 600w, mobile-q45/mobile-bits23.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits23.webp">
+            <img src="desktop-bits23.webp" alt="bits 23" loading="lazy">
+          </picture>
         </div>
         <div class="sheet">
-          <img src="desktop-bits24.webp" alt="bits 24" loading="lazy"
-            srcset="desktop-bits24.webp 1600w, mobile-bits24.webp 600w, mobile-q45/mobile-bits24.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits24.webp">
+            <img src="desktop-bits24.webp" alt="bits 24" loading="lazy">
+          </picture>
         </div>
         <div class="sheet">
-          <img src="desktop-bits25.webp" alt="bits 25" loading="lazy"
-            srcset="desktop-bits25.webp 1600w, mobile-bits25.webp 600w, mobile-q45/mobile-bits25.webp 400w"
-            sizes="(max-width: 400px) 95vw, (max-width: 600px) 90vw, 1600px"
-          />
+          <picture>
+            <source media="(max-width: 480px)" srcset="mobile-bits25.webp">
+            <img src="desktop-bits25.webp" alt="bits 25" loading="lazy">
+          </picture>
         </div>
     </div>
     <div class="h1">&gt;</div>
