--- a/bits.html
+++ b/bits.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bits</title>
+  <meta name="description" content="A collection of unfinished, untitled, and random abandoned digital art bits by loniboni. View the stack of experimental works in a responsive, mobile-optimized gallery." />
   <style>
     * { box-sizing: border-box; }
 
@@ -216,151 +217,151 @@
       <div class="sheet">
         <picture>
           <source media="(max-width: 480px)" srcset="mobile-bits1.webp">
-          <img src="desktop-bits1.webp" alt="bits 1" loading="lazy">
+          <img src="desktop-bits1.webp" alt="bits 1" loading="lazy" width="1600">
         </picture>
       </div>
     <div class="sheet">
       <picture>
         <source media="(max-width: 480px)" srcset="mobile-bits2.webp">
-        <img src="desktop-bits2.webp" alt="bits 2" loading="lazy">
+  <img src="desktop-bits2.webp" alt="bits 2" loading="lazy" width="1600">
       </picture>
     </div>
     <div class="sheet">
       <picture>
         <source media="(max-width: 480px)" srcset="mobile-bits3.webp">
-        <img src="desktop-bits3.webp" alt="bits 3" loading="lazy">
+  <img src="desktop-bits3.webp" alt="bits 3" loading="lazy" width="1600">
       </picture>
     </div>
     <div class="sheet">
       <picture>
         <source media="(max-width: 480px)" srcset="mobile-bits4.webp">
-        <img src="desktop-bits4.webp" alt="bits 4" loading="lazy">
+  <img src="desktop-bits4.webp" alt="bits 4" loading="lazy" width="1600">
       </picture>
     </div>
     <div class="sheet">
       <picture>
         <source media="(max-width: 480px)" srcset="mobile-bits5.webp">
-        <img src="desktop-bits5.webp" alt="bits 5" loading="lazy">
+  <img src="desktop-bits5.webp" alt="bits 5" loading="lazy" width="1600">
       </picture>
     </div>
   <div class="sheet">
     <picture>
       <source media="(max-width: 480px)" srcset="mobile-bits6.webp">
-      <img src="desktop-bits6.webp" alt="bits 6" loading="lazy">
+  <img src="desktop-bits6.webp" alt="bits 6" loading="lazy" width="1600">
     </picture>
   </div>
       <div class="sheet">
         <picture>
           <source media="(max-width: 480px)" srcset="mobile-bits7.webp">
-          <img src="desktop-bits7.webp" alt="bits 7" loading="lazy">
+          <img src="desktop-bits7.webp" alt="bits 7" loading="lazy" width="1600">
         </picture>
       </div>
       <div class="sheet">
         <picture>
           <source media="(max-width: 480px)" srcset="mobile-bits8.webp">
-          <img src="desktop-bits8.webp" alt="bits 8" loading="lazy">
+          <img src="desktop-bits8.webp" alt="bits 8" loading="lazy" width="1600">
         </picture>
       </div>
       <div class="sheet">
         <picture>
           <source media="(max-width: 480px)" srcset="mobile-bits9.webp">
-          <img src="desktop-bits9.webp" alt="bits 9" loading="lazy">
+          <img src="desktop-bits9.webp" alt="bits 9" loading="lazy" width="1600">
         </picture>
       </div>
       <div class="sheet">
         <picture>
           <source media="(max-width: 480px)" srcset="mobile-bits10.webp">
-          <img src="desktop-bits10.webp" alt="bits 10" loading="lazy">
+          <img src="desktop-bits10.webp" alt="bits 10" loading="lazy" width="1600">
         </picture>
       </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits11.webp">
-            <img src="desktop-bits11.webp" alt="bits 11" loading="lazy">
+            <img src="desktop-bits11.webp" alt="bits 11" loading="lazy" width="1600">
           </picture>
         </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits12.webp">
-            <img src="desktop-bits12.webp" alt="bits 12" loading="lazy">
+            <img src="desktop-bits12.webp" alt="bits 12" loading="lazy" width="1600">
           </picture>
         </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits13.webp">
-            <img src="desktop-bits13.webp" alt="bits 13" loading="lazy">
+            <img src="desktop-bits13.webp" alt="bits 13" loading="lazy" width="1600">
           </picture>
         </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits14.webp">
-            <img src="desktop-bits14.webp" alt="bits 14" loading="lazy">
+            <img src="desktop-bits14.webp" alt="bits 14" loading="lazy" width="1600">
           </picture>
         </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits15.webp">
-            <img src="desktop-bits15.webp" alt="bits 15" loading="lazy">
+            <img src="desktop-bits15.webp" alt="bits 15" loading="lazy" width="1600">
           </picture>
         </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits16.webp">
-            <img src="desktop-bits16.webp" alt="bits 16" loading="lazy">
+            <img src="desktop-bits16.webp" alt="bits 16" loading="lazy" width="1600">
           </picture>
         </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits17.webp">
-            <img src="desktop-bits17.webp" alt="bits 17" loading="lazy">
+            <img src="desktop-bits17.webp" alt="bits 17" loading="lazy" width="1600">
           </picture>
         </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits18.webp">
-            <img src="desktop-bits18.webp" alt="bits 18" loading="lazy">
+            <img src="desktop-bits18.webp" alt="bits 18" loading="lazy" width="1600">
           </picture>
         </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits19.webp">
-            <img src="desktop-bits19.webp" alt="bits 19" loading="lazy">
+            <img src="desktop-bits19.webp" alt="bits 19" loading="lazy" width="1600">
           </picture>
         </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits20.webp">
-            <img src="desktop-bits20.webp" alt="bits 20" loading="lazy">
+            <img src="desktop-bits20.webp" alt="bits 20" loading="lazy" width="1600">
           </picture>
         </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits21.webp">
-            <img src="desktop-bits21.webp" alt="bits 21" loading="lazy">
+            <img src="desktop-bits21.webp" alt="bits 21" loading="lazy" width="1600">
           </picture>
         </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits22.webp">
-            <img src="desktop-bits22.webp" alt="bits 22" loading="lazy">
+            <img src="desktop-bits22.webp" alt="bits 22" loading="lazy" width="1600">
           </picture>
         </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits23.webp">
-            <img src="desktop-bits23.webp" alt="bits 23" loading="lazy">
+            <img src="desktop-bits23.webp" alt="bits 23" loading="lazy" width="1600">
           </picture>
         </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits24.webp">
-            <img src="desktop-bits24.webp" alt="bits 24" loading="lazy">
+            <img src="desktop-bits24.webp" alt="bits 24" loading="lazy" width="1600">
           </picture>
         </div>
         <div class="sheet">
           <picture>
             <source media="(max-width: 480px)" srcset="mobile-bits25.webp">
-            <img src="desktop-bits25.webp" alt="bits 25" loading="lazy">
+            <img src="desktop-bits25.webp" alt="bits 25" loading="lazy" width="1600">
           </picture>
         </div>
     </div>
